Bug 351487 RegExp: Branch-callback checking could be made slightly more optimal patch by crowder@fiverocks.com r=mrbkap